@@ -1,1 +1,52 @@
+air
+air01
+air10
+
+Makefile
+Makefile.in
+aclocal.m4
 autom4te.cache/
+build/
+compile
+config.h.in
+config.h
+config.log
+config.status
+configure
+depcomp
+install-sh
+missing
+src/Makefile.in
+src/air-quality-sensor.1
+src/.deps/
+stamp-h1
+
+
+# Object files
+*.o
+*.ko
+*.obj
+*.elf
+
+# Libraries
+*.lib
+*.a
+
+# Shared objects (inc. Windows DLLs)
+*.dll
+*.so
+*.so.*
+*.dylib
+
+# Executables
+*.exe
+*.out
+*.app
+*.i*86
+*.x86_64
+*.hex
+src/air-quality-sensor
+
+# Backup files
+*~
+*.swp
