@@ -1,5 +1,5 @@
-.\" DO NOT MODIFY THIS FILE!  It was generated by help2man 1.47.4.
-.TH AIR-QUALITY-SENSOR "1" "August 2017" "air-quality-sensor (air-quality-sensor) 0.1.4.1" "User Commands"
+.\" DO NOT MODIFY THIS FILE!  It was generated by help2man 1.47.8.
+.TH AIR-QUALITY-SENSOR "1" "November 2019" "air-quality-sensor (air-quality-sensor) 0.1.5.0" "User Commands"
 .SH NAME
 air-quality-sensor \- User space driver for AppliedSensor's Indoor Air Monitor
 .SH SYNOPSIS
@@ -27,17 +27,13 @@ be verbose
 \fB\-V\fR, \fB\-\-version\fR
 display version information and exit
 .SH "REPORTING BUGS"
-Report bugs on <https://github.com/bwildenhain/air\-quality\-sensor/issues> or send a mail to air\-quality\-sensor@benedikt\-wildenhain.de
+Report bugs on <https://salsa.debian.org/tinker\-team/air\-quality\-sensor\-debian/issues> or use Debian's bug tracker (see https://bugs.debian.org/air\-quality\-sensor)
 .br
-Home page: <https://github.com/bwildenhain/air\-quality\-sensor>
+Home page: <https://salsa.debian.org/tinker\-team/air\-quality\-sensor\-debian>
 .SH COPYRIGHT
 Copyright \(co 2014 Jan\-Benedict Glaw
 .br
-<<<<<<< HEAD
-Copyright \(co 2015 Benedikt Wildenhain
-=======
-Copyright \(co 2017 Benedikt Wildenhain
->>>>>>> upstream/0.1.4.2
+Copyright \(co 2014\-2019 Benedikt Wildenhain
 .PP
 License GPLv3+: GNU GPL version 3 or later <http://gnu.org/licenses/gpl.html>
 .br
