@@ -16,7 +16,7 @@
     </p>
   </description>
 
-  <url type="homepage">https://github.com/bwildenhain/air-quality-sensor</url>
+  <url type="homepage">https://salsa.debian.org/tinker-team/air-quality-sensor-debian</url>
 
   <provides>
     <binary>air-quality-sensor</binary>
